WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91687
IndexedDB: Direction parameter ignored by some openCursor() overloads
https://bugs.webkit.org/show_bug.cgi?id=91687
Summary
IndexedDB: Direction parameter ignored by some openCursor() overloads
Joshua Bell
Reported
2012-07-18 15:59:35 PDT
IndexedDB: Direction parameter ignored by some openCursor() overloads
Attachments
Patch
(27.84 KB, patch)
2012-07-18 16:04 PDT
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-07-18 16:04:52 PDT
Created
attachment 153125
[details]
Patch
Joshua Bell
Comment 2
2012-07-18 16:07:43 PDT
tony@ - r?
Tony Chang
Comment 3
2012-07-18 16:10:21 PDT
Comment on
attachment 153125
[details]
Patch Hmm, interesting. Apple Mac gives warnings when parameters are unused. I wonder if we need to turn on some -W flag to enable this for chromium builds with clang.
WebKit Review Bot
Comment 4
2012-07-18 16:57:17 PDT
Comment on
attachment 153125
[details]
Patch Clearing flags on attachment: 153125 Committed
r123048
: <
http://trac.webkit.org/changeset/123048
>
WebKit Review Bot
Comment 5
2012-07-18 16:57:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug