IndexedDB: Direction parameter ignored by some openCursor() overloads https://bugs.webkit.org/show_bug.cgi?id=91687

Reviewed by Tony Chang.

Source/WebCore:

A few of the openCursor() and openKeyCursor() overloads were not passing along the
direction parameter, resulting in the default direction being used. Trivial fixes.
Also, added a whitespace fix to a relevant console warning.

Test: storage/indexeddb/cursor-overloads.html

* Modules/indexeddb/IDBIndex.cpp:
(WebCore::IDBIndex::openCursor):
(WebCore::IDBIndex::openKeyCursor):
* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::openCursor):

LayoutTests:

Test the overloads to ensure cursor direction is set correctly.

* storage/indexeddb/cursor-overloads-expected.txt: Added.
* storage/indexeddb/cursor-overloads.html: Added.
* storage/indexeddb/legacy-constants-expected.txt: Fix whitespace in console warnings.


Canonical link: https://commits.webkit.org/109506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123048 268f45cc-cd09-0410-ab3c-d52691b4dbfc